My work branch (#12)
* initial commit of trade processor application

* excluding target

* initial commit of trade processor application (#7) (#8)

Co-authored-by: Yuri Gridin <y_monsoon@gmail.com>

* deleted

* tests

* tests

* Test cleanup: enable sync-kafka-send via test properties, tag Kafka integration test, document CI, and exclude integration tests by default

* integration and unit tests, validations
Mask sensitive fields (e.g., account numbers).

* mvn profiles

* kafka config

* sanitize

* swagger

* lombok

* swagger test

* inlines

* generics-syntax

* format with mvn

* test: add integration test posting sample ingest-trade.json; docs: add sample-data and README links

* docker

* security

---------

Co-authored-by: Yuri Gridin <y_monsoon@gmail.com>